Make textured manifests deterministic and tighten material provenance